aboutme info changed overflow bug fixed

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 .header {
     width: 100%;
     height: 100vh;
@@ -8,7 +8,7 @@
 
 .header-menu {
     background-color: var(--bg-color);
-    padding: 30px clamp(.625rem, 8vw, 6.25rem);
+    padding: 30px clamp(0.625rem, 8vw, 6.25rem);
     max-width: 100vw;
     display: flex;
     justify-content: space-between;
@@ -49,8 +49,9 @@
     justify-content: center;
     align-items: center;
     z-index: 0;
+    overflow: hidden;
     .subtitle {
-        margin-top: clamp(.125rem,4vw,.625rem);
+        margin-top: clamp(0.125rem, 4vw, 0.625rem);
         display: flex;
         align-items: center;
         gap: 10px;
@@ -61,7 +62,7 @@
         }
     }
     h1 {
-        font-family: 'syne-eb';
+        font-family: "syne-eb";
         font-size: clamp(2rem, 10vw, 5rem);
         text-align: center;
         line-height: clamp(2rem, 7vw, 3.75rem);
@@ -69,22 +70,22 @@
     }
     h3 {
         margin-top: 10px;
-        font-size: clamp(.875rem, 4vw, 1.5rem);
+        font-size: clamp(0.875rem, 4vw, 1.5rem);
         text-align: right;
-        font-family: 'overpass-b';
+        font-family: "overpass-b";
         color: $highlight;
     }
 }
 
 .header-bottom {
-    padding: 30px clamp(.625rem, 8vw, 6.25rem);
+    padding: 30px clamp(0.625rem, 8vw, 6.25rem);
     display: flex;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
-    font-family: 'overpass-m';
+    font-family: "overpass-m";
     font-size: 14px;
     .mail {
         writing-mode: vertical-lr;
@@ -123,7 +124,7 @@
     }
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
     .sayhi {
         bottom: 80px !important;
     }
@@ -144,7 +145,7 @@
         justify-content: center;
         padding-bottom: 120px;
         gap: 120px;
-        font-family: 'syne-b';
+        font-family: "syne-b";
         font-size: clamp(1.5rem, 10vw, 5rem);
         text-align: left;
         opacity: 0;
@@ -174,8 +175,10 @@
         50% {
             background-size: 10% 4px;
         }
-        70% {}
-        90% {}
+        70% {
+        }
+        90% {
+        }
         100% {
             background-size: 100% 4px;
         }
@@ -191,7 +194,7 @@
     .social {
         position: absolute;
         bottom: 30px;
-        right: clamp(.625rem, 8vw, 6.25rem);
+        right: clamp(0.625rem, 8vw, 6.25rem);
         z-index: 1000;
         display: flex;
         gap: 30px;
@@ -207,12 +210,12 @@
     .sayhi {
         position: absolute;
         bottom: 30px;
-        left: clamp(.625rem, 8vw, 6.25rem);
+        left: clamp(0.625rem, 8vw, 6.25rem);
         color: $bg-color;
         z-index: 500;
         h1 {
-            font-family: 'syne-eb';
-            font-size: clamp(1.5rem,10vw,5rem);
+            font-family: "syne-eb";
+            font-size: clamp(1.5rem, 10vw, 5rem);
             transition: all 250ms;
             user-select: none;
             &:hover {
@@ -220,7 +223,7 @@
             }
         }
         span {
-            font-family: 'overpass-m';
+            font-family: "overpass-m";
             user-select: all;
         }
     }
